<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_border">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15dp"
        android:text="@string/override"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cancelOverride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:text="@string/cancel"
        android:layout_alignBaseline="@+id/saveOverride"
        android:layout_alignBottom="@+id/saveOverride"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:id="@+id/saveOverride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:text="@string/saveAs"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="15dp" />

</RelativeLayout>