<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.workouttracker.navDrawer">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home" />

            <android.support.design.widget.TabItem
                android:id="@+id/workouts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/workouts" />

            <android.support.design.widget.TabItem
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/max" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_nav_drawer" />


</android.support.design.widget.CoordinatorLayout>
