<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_border"
    android:orientation="vertical"
    android:paddingBottom="16sp"
    android:paddingEnd="16sp"
    android:id="@+id/pwConstraintLayout">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/saveTextInputLayout"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="28"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="20dp">

        <EditText
            android:id="@+id/enterFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:ems="10"
            android:hint="@string/file_name"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/saveTextInputLayout"
        android:layout_marginLeft="45dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/saveAs"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/saveTextInputLayout"
        app:layout_constraintLeft_toRightOf="@+id/cancel"
        android:layout_marginLeft="57dp" />
</android.support.constraint.ConstraintLayout>