<?xml version="1.0" encoding="utf-8"?>
<!--
<android.support.constraint.ConstraintLayout
    >-->

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rest_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingBottom="20dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/minTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColorHint="@color/primaryLightColor"
            app:errorEnabled="true"
            app:layout_constraintStart_toEndOf="@+id/colon"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/secondsTV"
                android:layout_width="90dp"
                android:layout_height="44dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/seconds"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/semi_colon"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/secTextInputLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rest"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/rest"
            android:textAlignment="center"
            android:textColor="@color/primaryLightColor"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/reorder"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reorder"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:paddingTop="5dp"
        android:tint="@color/primaryLightColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reorder" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/secTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColorHint="@color/primaryLightColor"
            app:errorEnabled="true"
            app:layout_constraintStart_toEndOf="@+id/rest"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/minutesTV"
                android:layout_width="90dp"
                android:layout_height="44dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minutes"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center">

            </EditText>
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
<!--</android.support.constraint.ConstraintLayout>-->